--- a/experiment/config/load_early.yaml
+++ b/experiment/config/load_early.yaml
@@ -37,7 +37,7 @@ agents:
 #     start_states: [0.0]
 
 collector_module:
-  _target_: experiment.handlers.CustomRangeDataCollector
+  _target_: experiment.data_collectors.CustomRangeDataCollector
   num_dims: 4
   custom_ranges: [[[-2.4, 2.4, 41]],  # lat. pos.
     [[-4.8, -1.2, 7], [-1.2, 1.2, 29], [1.2, 4.8, 7]], # lat. vel.
