--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: icp
+name: dtree
 channels:
   - anaconda
   - defaults
@@ -7,139 +7,133 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _pytorch_select=0.1=cpu_0
   - _tflow_select=2.1.0=gpu
-  - absl-py=0.10.0=py36_0
-  - argon2-cffi=20.1.0=py36h8c4c3a4_2
-  - astor=0.8.1=py36_0
-  - astroid=1.6.5=py36_0
-  - async_generator=1.10=py_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.1=py_0
+  - absl-py=0.10.0
+  - argon2-cffi=20.1.0
+  - astor=0.8.1
+  - astroid=1.6.5
+  - async_generator=1.10
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.1
   - blas=1.0=mkl
-  - bleach=3.2.1=pyh9f0ad1d_0
-  - brotlipy=0.7.0=py36he6145b8_1001
-  - c-ares=1.16.1=h7b6447c_0
-  - ca-certificates=2021.1.19=h06a4308_0
-  - certifi=2020.12.5=py36h06a4308_0
-  - cffi=1.14.4=py36h261ae71_0
-  - chardet=3.0.4=py36h9880bd3_1008
-  - cryptography=3.1.1=py36h5d711a5_1
-  - cudatoolkit=10.2.89=hfd86e86_1
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - entrypoints=0.3=py36h9f0ad1d_1002
-  - freetype=2.10.4=h5ab3b9f_0
-  - gast=0.4.0=py_0
-  - gmp=6.2.1=h2531618_2
-  - gmpy2=2.0.8=py36h10f8cd9_2
-  - google-pasta=0.2.0=py_0
-  - h5py=2.10.0=py36hd6299e0_1
-  - hdf5=1.10.6=hb1b8bf9_0
-  - idna=2.10=pyh9f0ad1d_0
-  - importlib-metadata=2.0.0=py_1
-  - importlib_metadata=2.0.0=1
-  - intel-openmp=2020.2=254
-  - ipykernel=5.3.4=py36hac0dd68_1
-  - ipython=5.8.0=py36_1
-  - ipython_genutils=0.2.0=py_1
-  - isort=5.6.4=py_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - jpeg=9b=h024ee3a_2
-  - json5=0.9.5=pyh9f0ad1d_0
-  - jsonschema=3.2.0=py_2
-  - jupyter_client=6.1.7=py_0
-  - jupyter_core=4.6.3=py36h9f0ad1d_2
-  - jupyterlab=2.2.8=py_0
-  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-  - jupyterlab_server=1.2.0=py_0
-  - keras-applications=1.0.8=py_1
-  - keras-preprocessing=1.1.0=py_1
-  - krb5=1.18.2=h173b8e3_0
-  - lazy-object-proxy=1.5.1=py36h7b6447c_0
-  - lcms2=2.11=h396b838_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libcurl=7.71.1=h20c2e04_1
-  - libedit=3.1.20191231=h14c3975_1
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.13.0.1=hd408876_0
-  - libsodium=1.0.18=h516909a_1
-  - libssh2=1.9.0=h1ba5d50_1
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.1.0=h2733197_1
-  - lz4-c=1.9.2=heb0550a_3
-  - markdown=3.3.2=py36_0
-  - markupsafe=1.1.1=py36he6145b8_2
-  - mccabe=0.6.1=py36_1
-  - mistune=0.8.4=py36h8c4c3a4_1002
+  - bleach=3.2.1
+  - brotlipy=0.7.0
+  - c-ares=1.16.1
+  - ca-certificates=2021.1.19
+  - certifi=2020.12.5
+  - cffi=1.14.4
+  - chardet=3.0.4
+  - cryptography=3.1.1
+  - cudatoolkit=10.2.89
+  - decorator=4.4.2
+  - defusedxml=0.6.0
+  - entrypoints=0.3
+  - freetype=2.10.4
+  - gast=0.4.0
+  - gmp=6.2.1
+  - gmpy2=2.0.8
+  - google-pasta=0.2.0
+  - h5py=2.10.0
+  - hdf5=1.10.6
+  - idna=2.10
+  - importlib-metadata=2.0.0
+  - importlib_metadata=2.0.0
+  - intel-openmp=2020.2
+  - ipykernel=5.3.4
+  - ipython=5.8.0
+  - ipython_genutils=0.2.0
+  - isort=5.6.4
+  - jinja2=2.11.2
+  - jpeg=9b
+  - json5=0.9.5
+  - jsonschema=3.2.0
+  - jupyter_client=6.1.7
+  - jupyter_core=4.6.3
+  - jupyterlab=2.2.8
+  - jupyterlab_pygments=0.1.2
+  - jupyterlab_server=1.2.0
+  - keras-applications=1.0.8
+  - keras-preprocessing=1.1.0
+  - krb5=1.18.2
+  - lazy-object-proxy=1.5.1
+  - lcms2=2.11
+  - ld_impl_linux-64=2.33.1
+  - libcurl=7.71.1
+  - libedit=3.1.20191231
+  - libffi=3.3
+  - libgcc-ng=9.1.0
+  - libgfortran-ng=7.3.0
+  - libpng=1.6.37
+  - libprotobuf=3.13.0.1
+  - libsodium=1.0.18
+  - libssh2=1.9.0
+  - libstdcxx-ng=9.1.0
+  - libtiff=4.1.0
+  - lz4-c=1.9.2
+  - markdown=3.3.2
+  - markupsafe=1.1.1
+  - mccabe=0.6.1
+  - mistune=0.8.4
   - mkl=2020.2=256
-  - mkl-service=2.3.0=py36h8c4c3a4_2
-  - mkl_fft=1.2.0=py36h68bb277_1
-  - mkl_random=1.2.0=py36h7c3b610_1
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpmath=1.1.0=py36_0
-  - nbclient=0.5.1=py_0
-  - nbconvert=6.0.7=py36h9f0ad1d_1
-  - nbformat=5.0.8=py_0
-  - ncurses=6.2=he6710b0_1
-  - nest-asyncio=1.4.1=py_0
-  - ninja=1.10.1=hfc4b9b4_2
-  - notebook=6.1.4=py36h9f0ad1d_1
-  - numpy-base=1.19.1=py36hfa32c7d_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1i=h27cfd23_0
-  - packaging=20.4=pyh9f0ad1d_0
-  - pandoc=2.11.0.2=hd18ef5c_0
-  - pandocfilters=1.4.2=py_1
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=8.0.0=py36h9a89aac_0
-  - pip=20.2.4=py_0
-  - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt_toolkit=1.0.15=py_1
-  - ptyprocess=0.6.0=py_1001
-  - pycparser=2.20=pyh9f0ad1d_2
-  - pygments=2.7.1=py_0
-  - pylint=1.8.4=py36_0
-  - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pysocks=1.7.1=py36h9880bd3_2
-  - python=3.6.12=hcff3b4d_2
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.6=1_cp36m
-  - pytorch=1.4.0=cpu_py36h7e40bad_0
-  - pyzmq=19.0.2=py36h9947dbf_2
-  - readline=8.0=h7b6447c_0
-  - requests=2.24.0=pyh9f0ad1d_0
-  - send2trash=1.5.0=py_0
-  - setuptools=49.6.0=py36h9880bd3_2
-  - simplegeneric=0.8.1=py_1
-  - six=1.15.0=py_0
-  - sqlite=3.33.0=h62c20be_0
-  - sympy=1.7.1=py36h06a4308_0
-  - tensorflow=1.14.0=hc3e5e64_0
-  - tensorflow-base=1.14.0=py36hc3e5e64_0
-  - tensorflow-estimator=1.14.0=py_0
-  - tensorflow-gpu=1.14.0=h0d30ee6_0
-  - terminado=0.9.1=py36h9f0ad1d_1
-  - testpath=0.4.4=py_0
-  - tk=8.6.10=hbc83047_0
-  - torchvision=0.2.1=py36_0
-  - tornado=6.0.4=py36h8c4c3a4_2
-  - traitlets=4.3.3=py36h9f0ad1d_1
-  - urllib3=1.25.11=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - werkzeug=1.0.1=py_0
-  - wheel=0.35.1=py_0
-  - wrapt=1.12.1=py36h7b6447c_1
-  - xz=5.2.5=h7b6447c_0
-  - zeromq=4.3.3=he1b5a44_2
-  - zipp=3.3.1=py_0
-  - zlib=1.2.11=h7b6447c_3
-  - zstd=1.4.5=h9ceee32_0
+  - mkl-service=2.3.0
+  - mkl_fft=1.2.0
+  - mkl_random=1.2.0
+  - mpc=1.1.0
+  - mpfr=4.0.2
+  - mpmath=1.1.0
+  - nbclient=0.5.1
+  - nbconvert=6.0.7
+  - nbformat=5.0.8
+  - ncurses=6.2
+  - nest-asyncio=1.4.1
+  - ninja=1.10.1
+  - notebook=6.1.4
+  - numpy-base=1.19.1
+  - olefile=0.46
+  - openssl=1.1.1i
+  - packaging=20.4
+  - pandoc=2.11.0.2
+  - pandocfilters=1.4.2
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=8.0.0
+  - pip=20.2.4
+  - prometheus_client=0.8.0
+  - prompt_toolkit=1.0.15
+  - ptyprocess=0.6.0
+  - pycparser=2.20
+  - pygments=2.7.1
+  - pylint=1.8.4
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.7
+  - pysocks=1.7.1
+  - python-dateutil=2.8.1
+  - pytorch=1.4.0
+  - pyzmq=19.0.2
+  - readline=8.0
+  - requests=2.24.0
+  - send2trash=1.5.0
+  - setuptools=49.6.0
+  - simplegeneric=0.8.1
+  - six=1.15.0
+  - sqlite=3.33.0
+  - sympy=1.7.1
+  - terminado=0.9.1
+  - testpath=0.4.4
+  - tk=8.6.10
+  - torchvision=0.2.1
+  - tornado=6.0.4
+  - traitlets=4.3.3
+  - urllib3=1.25.11
+  - wcwidth=0.2.5
+  - webencodings=0.5.1
+  - werkzeug=1.0.1
+  - wheel=0.35.1
+  - wrapt=1.12.1
+  - xz=5.2.5
+  - zeromq=4.3.3
+  - zipp=3.3.1
+  - zlib=1.2.11
+  - zstd=1.4.5
   - pip:
     - antlr4-python3-runtime==4.8
     - attrs==19.3.0
