finializing the debugging of the cnf generator code

--- a/experiment/decision_tree/config/solver.yaml
+++ b/experiment/decision_tree/config/solver.yaml
@@ -7,8 +7,10 @@ experiment_name: cartpole_sat_solver
 solver:
   use_simple: true
   example_file: /home/joon/xai/causal/stable-baselines3/outputs/example_data/example_data_99.pickle
+  model_output_file: model_output.txt
+  max_output_models: 1000
   n_example_steps: 10
-  max_tree_size: 3
+  max_tree_size: 15
   n_features: 4
   n_sub_features: 20
   use_custom_range: false
